[ ADD ] Criação do repositório 'docker-simec' tomando como base o repositório 'dicker-salic'. [ UPDATE ] Criação de estrutura para que a aplicação funcione corretamente com configurações do SIMEC no apache [ UPDATE ] Remoção de ações desnecessárias na criação do container em 'start.sh' [ UPDATE ] Alteração de dependências do PHP que serão compiladas necessárias para funcionamento do SIMEC dentor do Dockerfile [ UPDATE ] Alteração do arquivo README.md para que esteja condizente com configurações do SIMEC

--- a/src/actions/virtual-host/site.conf
+++ b/src/actions/virtual-host/site.conf
@@ -1,15 +1,32 @@
-<VirtualHost *:80>
-    ServerName salic
-    DocumentRoot /var/www
+NameVirtualHost *:80
+<VirtualHost *>
 
-    ErrorLog /var/log/apache2/error.log
-    CustomLog /var/log/apache2/access.log combined
+       ServerName local.simec
+       ServerAdmin simec@mec.gov.br
+       DocumentRoot "/var/www/simec/www"
 
-    <Directory /var/www>
-        Options +Indexes +FollowSymLinks
-        DirectoryIndex index.php
-        AllowOverride All
-        Order allow,deny
-        Allow from all
-    </Directory>
+       <Directory "/var/www/simec/www/xml/">
+               Options +Indexes
+       </Directory>
+
+       <Directory "/var/www/simec/www">
+               Options FollowSymLinks
+               AllowOverride None
+               Order allow,deny
+               allow from all
+       </Directory>
+
+       ErrorLog /var/log/apache2/error.log
+       CustomLog /var/log/apache2/access.log combined
+       # ServerSignature On
+
+       Alias /elabrev "/var/www/simec/elabrev/www"
+       Alias /monitora "/var/www/simec/monitora/www"
+       Alias /seguranca "/var/www/simec/seguranca/www"
+       Alias /financeiro "/var/www/simec/financeiro/www"
+       Alias /zimec "/var/www/simec/zimec/public"
+       Alias /pde "/var/www/simec/pde/www"
+
+       php_value include_path ".:/var/www/ZendFramework/library:/var/www/simec/includes:/var/www/simec/global"
+
 </VirtualHost>
