Fix - Corrigindo path do tema zimec(Inspina)/Cabecalho v3.

--- a/src/actions/virtual-host/site.conf
+++ b/src/actions/virtual-host/site.conf
@@ -2,7 +2,7 @@ NameVirtualHost *:80
 <VirtualHost *>
 
        ServerName local.simec
-       ServerAdmin simec@mec.gov.br
+       ServerAdmin seu_email@dominio.gov.br
        DocumentRoot "/var/www/simec/www"
 
        <Directory "/var/www/simec/www/xml/">
@@ -24,7 +24,7 @@ NameVirtualHost *:80
        Alias /monitora "/var/www/simec/monitora/www"
        Alias /seguranca "/var/www/simec/seguranca/www"
        Alias /financeiro "/var/www/simec/financeiro/www"
-       Alias /zimec "/var/www/simec/zimec/public"
+       Alias /zimec "/var/www/simec/zimec"
        Alias /pde "/var/www/simec/pde/www"
 
        php_value include_path ".:/var/www/ZendFramework/library:/var/www/simec/includes:/var/www/simec/global"
